--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@craco/craco": "^6.1.1",
         "@tailwindcss/postcss7-compat": "^2.0.3",
         "@testing-library/jest-dom": "^5.11.9",
@@ -12,7 +13,7 @@
         "postcss": "^7.0.35",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^6.14.2",
         "react-scripts": "4.0.2",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "web-vitals": "^1.1.0"
