--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@craco/craco": "^6.1.1",
+        "@reduxjs/toolkit": "^1.9.5",
         "@tailwindcss/postcss7-compat": "^2.0.3",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
@@ -14,8 +15,10 @@
         "postcss": "^7.0.35",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-redux": "^8.1.2",
         "react-router-dom": "^6.14.2",
         "react-scripts": "4.0.2",
+        "redux": "^4.2.1",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "web-vitals": "^1.1.0"
     },
